tests/ui/transmutability/issue-110892.current.stderr
error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:29:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:30:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:31:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:32:9
   |
LL |         ,
   |         ^ expected parameter name

error[E0308]: mismatched types
  --> $DIR/issue-110892.rs:33:10
   |
LL |     const fn from_options(
   |              ------------ implicitly returns `()` as its body has no tail or `return` expression
...
LL |     ) -> Assume {}
   |          ^^^^^^ expected `Assume`, found `()`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
